# parallel-bnb

./: .gitignore  CMakeLists.txt  mkl_test.c  mkl_test.cpp  mkl_wrap.c  mkl_wrap.cpp  mkl_wrap.h  mkl_wrap.hpp
Debug/: build.sh
Release/: build.sh
